compilador.output
Terminals unused in grammar

    TYPE
    ARRAY
    NOT
    OF
    ABRE_COLCHETES
    FECHA_COLCHETES
    ABRE_CHAVES
    FECHA_CHAVES


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 $@3: ε

    5 $@4: ε

    6 bloco: parte_declara_labels $@2 parte_declara_vars $@3 parte_declara_subrotinas $@4 comando_composto

    7 parte_declara_labels: LABEL declara_labels PONTO_E_VIRGULA
    8                     | ε

    9 declara_labels: declara_labels VIRGULA label
   10               | label

   11 label: NUMERO

   12 $@5: ε

   13 parte_declara_vars: $@5 VAR declara_vars
   14                   | ε

   15 declara_vars: declara_vars declara_var
   16             | declara_var

   17 $@6: ε

   18 $@7: ε

   19 $@8: ε

   20 declara_var: $@6 lista_id_var DOIS_PONTOS $@7 tipo $@8 PONTO_E_VIRGULA

   21 tipo: IDENT

   22 lista_idents: lista_idents VIRGULA IDENT
   23             | IDENT

   24 lista_id_var: lista_id_var VIRGULA var
   25             | var

   26 var: IDENT

   27 parte_declara_subrotinas: parte_declara_subrotinas declara_proc PONTO_E_VIRGULA
   28                         | parte_declara_subrotinas declara_func PONTO_E_VIRGULA
   29                         | ε

   30 $@9: ε

   31 $@10: ε

   32 declara_proc: PROCEDURE IDENT $@9 talvez_params_formais $@10 PONTO_E_VIRGULA bloco

   33 $@11: ε

   34 $@12: ε

   35 $@13: ε

   36 declara_func: FUNCTION IDENT $@11 talvez_params_formais $@12 DOIS_PONTOS tipo $@13 PONTO_E_VIRGULA bloco

   37 talvez_params_formais: params_formais
   38                      | ε

   39 params_formais: ABRE_PARENTESES parametros FECHA_PARENTESES

   40 parametros: secoes_parametros

   41 $@14: ε

   42 secoes_parametros: secoes_parametros PONTO_E_VIRGULA $@14 lista_de_parametros DOIS_PONTOS tipo

   43 $@15: ε

   44 secoes_parametros: $@15 lista_de_parametros DOIS_PONTOS tipo

   45 lista_de_parametros: lista_de_parametros VIRGULA talvez_var param
   46                    | talvez_var param

   47 param: IDENT

   48 talvez_var: VAR
   49           | ε

   50 comando_composto: T_BEGIN comandos T_END

   51 comandos: comandos PONTO_E_VIRGULA comando
   52         | comando

   53 $@16: ε

   54 comando: NUMERO $@16 DOIS_PONTOS comando_sem_rotulo
   55        | comando_sem_rotulo

   56 comando_sem_rotulo: atribuicao_proc_ou_func
   57                   | comando_repetitivo
   58                   | comando_condicional
   59                   | comando_composto
   60                   | leitura
   61                   | escrita
   62                   | desvio
   63                   | ε

   64 leitura: READ ABRE_PARENTESES itens_leitura FECHA_PARENTESES

   65 itens_leitura: itens_leitura VIRGULA item_leitura
   66              | item_leitura

   67 item_leitura: IDENT

   68 escrita: WRITE ABRE_PARENTESES itens_escrita FECHA_PARENTESES

   69 itens_escrita: itens_escrita VIRGULA expressao
   70              | expressao

   71 $@17: ε

   72 atribuicao_proc_ou_func: IDENT $@17 a_continua

   73 $@18: ε

   74 a_continua: $@18 ATRIBUICAO atribuicao
   75           | proc_sem_param
   76           | proc_com_param

   77 atribuicao: expressao

   78 proc_sem_param: ε

   79 $@19: ε

   80 $@20: ε

   81 $@21: ε

   82 proc_com_param: $@19 ABRE_PARENTESES $@20 lista_de_expressoes $@21 FECHA_PARENTESES

   83 desvio: GOTO NUMERO

   84 $@22: ε

   85 $@23: ε

   86 comando_condicional: IF expressao $@22 THEN comando_sem_rotulo $@23 talvez_else

   87 talvez_else: ELSE comando_sem_rotulo
   88            | ε

   89 $@24: ε

   90 $@25: ε

   91 comando_repetitivo: WHILE $@24 expressao DO $@25 comando_sem_rotulo

   92 $@26: ε

   93 lista_de_expressoes: lista_de_expressoes VIRGULA $@26 expressao

   94 $@27: ε

   95 lista_de_expressoes: $@27 expressao
   96                    | ε

   97 expressao: expressao_simples
   98          | expressao_simples relacao expressao_simples

   99 relacao: IGUAL
  100        | DIFERENTE
  101        | MENOR
  102        | MENOR_IGUAL
  103        | MAIOR
  104        | MAIOR_IGUAL

  105 expressao_simples: expressao_simples mais_menos_or termo
  106                  | mais_menos_vazio termo

  107 mais_menos_or: MAIS
  108              | MENOS
  109              | OR

  110 mais_menos_vazio: MAIS
  111                 | MENOS
  112                 | ε

  113 termo: termo vezes_div_and fator
  114      | fator

  115 vezes_div_and: VEZES
  116              | DIV
  117              | AND

  118 fator: variavel_ou_func
  119      | NUMERO
  120      | ABRE_PARENTESES expressao FECHA_PARENTESES

  121 $@28: ε

  122 variavel_ou_func: IDENT $@28 talvez_params_func

  123 $@29: ε

  124 talvez_params_func: ABRE_PARENTESES $@29 lista_params_reais FECHA_PARENTESES
  125                   | ε

  126 $@30: ε

  127 lista_params_reais: lista_params_reais VIRGULA $@30 expressao_simples

  128 $@31: ε

  129 lista_params_reais: $@31 expressao_simples


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 39 64 68 82 120 124
    FECHA_PARENTESES (260) 2 39 64 68 82 120 124
    VIRGULA (261) 9 22 24 45 65 69 93 127
    PONTO_E_VIRGULA (262) 2 7 20 27 28 32 36 42 51
    DOIS_PONTOS (263) 20 36 42 44 54
    PONTO (264) 2
    T_BEGIN (265) 50
    T_END (266) 50
    VAR (267) 13 48
    NUMERO (268) 11 54 83 119
    IDENT (269) 2 21 22 23 26 32 36 47 67 72 122
    ATRIBUICAO (270) 74
    LABEL (271) 7
    TYPE (272)
    ARRAY (273)
    PROCEDURE (274) 32
    FUNCTION (275) 36
    GOTO (276) 83
    IF (277) 86
    THEN (278) 86
    ELSE (279) 87
    WHILE (280) 91
    DO (281) 91
    OR (282) 109
    DIV (283) 116
    AND (284) 117
    NOT (285)
    OF (286)
    VEZES (287) 115
    MAIS (288) 107 110
    MENOS (289) 108 111
    MAIOR (290) 103
    MAIOR_IGUAL (291) 104
    MENOR (292) 101
    MENOR_IGUAL (293) 102
    DIFERENTE (294) 100
    IGUAL (295) 99
    ABRE_COLCHETES (296)
    FECHA_COLCHETES (297)
    ABRE_CHAVES (298)
    FECHA_CHAVES (299)
    WRITE (300) 68
    READ (301) 64
    "lower_than_else" (302)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    programa (49)
        on left: 2
        on right: 0
    $@1 (50)
        on left: 1
        on right: 2
    bloco (51)
        on left: 6
        on right: 2 32 36
    $@2 (52)
        on left: 3
        on right: 6
    $@3 (53)
        on left: 4
        on right: 6
    $@4 (54)
        on left: 5
        on right: 6
    parte_declara_labels (55)
        on left: 7 8
        on right: 6
    declara_labels (56)
        on left: 9 10
        on right: 7 9
    label (57)
        on left: 11
        on right: 9 10
    parte_declara_vars (58)
        on left: 13 14
        on right: 6
    $@5 (59)
        on left: 12
        on right: 13
    declara_vars (60)
        on left: 15 16
        on right: 13 15
    declara_var (61)
        on left: 20
        on right: 15 16
    $@6 (62)
        on left: 17
        on right: 20
    $@7 (63)
        on left: 18
        on right: 20
    $@8 (64)
        on left: 19
        on right: 20
    tipo (65)
        on left: 21
        on right: 20 36 42 44
    lista_idents (66)
        on left: 22 23
        on right: 2 22
    lista_id_var (67)
        on left: 24 25
        on right: 20 24
    var (68)
        on left: 26
        on right: 24 25
    parte_declara_subrotinas (69)
        on left: 27 28 29
        on right: 6 27 28
    declara_proc (70)
        on left: 32
        on right: 27
    $@9 (71)
        on left: 30
        on right: 32
    $@10 (72)
        on left: 31
        on right: 32
    declara_func (73)
        on left: 36
        on right: 28
    $@11 (74)
        on left: 33
        on right: 36
    $@12 (75)
        on left: 34
        on right: 36
    $@13 (76)
        on left: 35
        on right: 36
    talvez_params_formais (77)
        on left: 37 38
        on right: 32 36
    params_formais (78)
        on left: 39
        on right: 37
    parametros (79)
        on left: 40
        on right: 39
    secoes_parametros (80)
        on left: 42 44
        on right: 40 42
    $@14 (81)
        on left: 41
        on right: 42
    $@15 (82)
        on left: 43
        on right: 44
    lista_de_parametros (83)
        on left: 45 46
        on right: 42 44 45
    param (84)
        on left: 47
        on right: 45 46
    talvez_var (85)
        on left: 48 49
        on right: 45 46
    comando_composto (86)
        on left: 50
        on right: 6 59
    comandos (87)
        on left: 51 52
        on right: 50 51
    comando (88)
        on left: 54 55
        on right: 51 52
    $@16 (89)
        on left: 53
        on right: 54
    comando_sem_rotulo (90)
        on left: 56 57 58 59 60 61 62 63
        on right: 54 55 86 87 91
    leitura (91)
        on left: 64
        on right: 60
    itens_leitura (92)
        on left: 65 66
        on right: 64 65
    item_leitura (93)
        on left: 67
        on right: 65 66
    escrita (94)
        on left: 68
        on right: 61
    itens_escrita (95)
        on left: 69 70
        on right: 68 69
    atribuicao_proc_ou_func (96)
        on left: 72
        on right: 56
    $@17 (97)
        on left: 71
        on right: 72
    a_continua (98)
        on left: 74 75 76
        on right: 72
    $@18 (99)
        on left: 73
        on right: 74
    atribuicao (100)
        on left: 77
        on right: 74
    proc_sem_param (101)
        on left: 78
        on right: 75
    proc_com_param (102)
        on left: 82
        on right: 76
    $@19 (103)
        on left: 79
        on right: 82
    $@20 (104)
        on left: 80
        on right: 82
    $@21 (105)
        on left: 81
        on right: 82
    desvio (106)
        on left: 83
        on right: 62
    comando_condicional (107)
        on left: 86
        on right: 58
    $@22 (108)
        on left: 84
        on right: 86
    $@23 (109)
        on left: 85
        on right: 86
    talvez_else (110)
        on left: 87 88
        on right: 86
    comando_repetitivo (111)
        on left: 91
        on right: 57
    $@24 (112)
        on left: 89
        on right: 91
    $@25 (113)
        on left: 90
        on right: 91
    lista_de_expressoes (114)
        on left: 93 95 96
        on right: 82 93
    $@26 (115)
        on left: 92
        on right: 93
    $@27 (116)
        on left: 94
        on right: 95
    expressao <int_val> (117)
        on left: 97 98
        on right: 69 70 77 86 91 93 95 120
    relacao <str> (118)
        on left: 99 100 101 102 103 104
        on right: 98
    expressao_simples <int_val> (119)
        on left: 105 106
        on right: 97 98 105 127 129
    mais_menos_or <str> (120)
        on left: 107 108 109
        on right: 105
    mais_menos_vazio <str> (121)
        on left: 110 111 112
        on right: 106
    termo <int_val> (122)
        on left: 113 114
        on right: 105 106 113
    vezes_div_and <str> (123)
        on left: 115 116 117
        on right: 113
    fator <int_val> (124)
        on left: 118 119 120
        on right: 113 114
    variavel_ou_func (125)
        on left: 122
        on right: 118
    $@28 (126)
        on left: 121
        on right: 122
    talvez_params_func (127)
        on left: 124 125
        on right: 122
    $@29 (128)
        on left: 123
        on right: 124
    lista_params_reais (129)
        on left: 127 129
        on right: 124 127
    $@30 (130)
        on left: 126
        on right: 127
    $@31 (131)
        on left: 128
        on right: 129


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   23 lista_idents: IDENT •

    $default  reduce using rule 23 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   22 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   22 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    LABEL  shift, and go to state 13

    $default  reduce using rule 8 (parte_declara_labels)

    bloco                 go to state 14
    parte_declara_labels  go to state 15


State 12

   22 lista_idents: lista_idents VIRGULA IDENT •

    $default  reduce using rule 22 (lista_idents)


State 13

    7 parte_declara_labels: LABEL • declara_labels PONTO_E_VIRGULA

    NUMERO  shift, and go to state 16

    declara_labels  go to state 17
    label           go to state 18


State 14

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 19


State 15

    6 bloco: parte_declara_labels • $@2 parte_declara_vars $@3 parte_declara_subrotinas $@4 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 20


State 16

   11 label: NUMERO •

    $default  reduce using rule 11 (label)


State 17

    7 parte_declara_labels: LABEL declara_labels • PONTO_E_VIRGULA
    9 declara_labels: declara_labels • VIRGULA label

    VIRGULA          shift, and go to state 21
    PONTO_E_VIRGULA  shift, and go to state 22


State 18

   10 declara_labels: label •

    $default  reduce using rule 10 (declara_labels)


State 19

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 20

    6 bloco: parte_declara_labels $@2 • parte_declara_vars $@3 parte_declara_subrotinas $@4 comando_composto

    VAR       reduce using rule 12 ($@5)
    $default  reduce using rule 14 (parte_declara_vars)

    parte_declara_vars  go to state 23
    $@5                 go to state 24


State 21

    9 declara_labels: declara_labels VIRGULA • label

    NUMERO  shift, and go to state 16

    label  go to state 25


State 22

    7 parte_declara_labels: LABEL declara_labels PONTO_E_VIRGULA •

    $default  reduce using rule 7 (parte_declara_labels)


State 23

    6 bloco: parte_declara_labels $@2 parte_declara_vars • $@3 parte_declara_subrotinas $@4 comando_composto

    $default  reduce using rule 4 ($@3)

    $@3  go to state 26


State 24

   13 parte_declara_vars: $@5 • VAR declara_vars

    VAR  shift, and go to state 27


State 25

    9 declara_labels: declara_labels VIRGULA label •

    $default  reduce using rule 9 (declara_labels)


State 26

    6 bloco: parte_declara_labels $@2 parte_declara_vars $@3 • parte_declara_subrotinas $@4 comando_composto

    $default  reduce using rule 29 (parte_declara_subrotinas)

    parte_declara_subrotinas  go to state 28


State 27

   13 parte_declara_vars: $@5 VAR • declara_vars

    $default  reduce using rule 17 ($@6)

    declara_vars  go to state 29
    declara_var   go to state 30
    $@6           go to state 31


State 28

    6 bloco: parte_declara_labels $@2 parte_declara_vars $@3 parte_declara_subrotinas • $@4 comando_composto
   27 parte_declara_subrotinas: parte_declara_subrotinas • declara_proc PONTO_E_VIRGULA
   28                         | parte_declara_subrotinas • declara_func PONTO_E_VIRGULA

    PROCEDURE  shift, and go to state 32
    FUNCTION   shift, and go to state 33

    $default  reduce using rule 5 ($@4)

    $@4           go to state 34
    declara_proc  go to state 35
    declara_func  go to state 36


State 29

   13 parte_declara_vars: $@5 VAR declara_vars •
   15 declara_vars: declara_vars • declara_var

    IDENT     reduce using rule 17 ($@6)
    $default  reduce using rule 13 (parte_declara_vars)

    declara_var  go to state 37
    $@6          go to state 31


State 30

   16 declara_vars: declara_var •

    $default  reduce using rule 16 (declara_vars)


State 31

   20 declara_var: $@6 • lista_id_var DOIS_PONTOS $@7 tipo $@8 PONTO_E_VIRGULA

    IDENT  shift, and go to state 38

    lista_id_var  go to state 39
    var           go to state 40


State 32

   32 declara_proc: PROCEDURE • IDENT $@9 talvez_params_formais $@10 PONTO_E_VIRGULA bloco

    IDENT  shift, and go to state 41


State 33

   36 declara_func: FUNCTION • IDENT $@11 talvez_params_formais $@12 DOIS_PONTOS tipo $@13 PONTO_E_VIRGULA bloco

    IDENT  shift, and go to state 42


State 34

    6 bloco: parte_declara_labels $@2 parte_declara_vars $@3 parte_declara_subrotinas $@4 • comando_composto

    T_BEGIN  shift, and go to state 43

    comando_composto  go to state 44


State 35

   27 parte_declara_subrotinas: parte_declara_subrotinas declara_proc • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 45


State 36

   28 parte_declara_subrotinas: parte_declara_subrotinas declara_func • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 46


State 37

   15 declara_vars: declara_vars declara_var •

    $default  reduce using rule 15 (declara_vars)


State 38

   26 var: IDENT •

    $default  reduce using rule 26 (var)


State 39

   20 declara_var: $@6 lista_id_var • DOIS_PONTOS $@7 tipo $@8 PONTO_E_VIRGULA
   24 lista_id_var: lista_id_var • VIRGULA var

    VIRGULA      shift, and go to state 47
    DOIS_PONTOS  shift, and go to state 48


State 40

   25 lista_id_var: var •

    $default  reduce using rule 25 (lista_id_var)


State 41

   32 declara_proc: PROCEDURE IDENT • $@9 talvez_params_formais $@10 PONTO_E_VIRGULA bloco

    $default  reduce using rule 30 ($@9)

    $@9  go to state 49


State 42

   36 declara_func: FUNCTION IDENT • $@11 talvez_params_formais $@12 DOIS_PONTOS tipo $@13 PONTO_E_VIRGULA bloco

    $default  reduce using rule 33 ($@11)

    $@11  go to state 50


State 43

   50 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  shift, and go to state 43
    NUMERO   shift, and go to state 51
    IDENT    shift, and go to state 52
    GOTO     shift, and go to state 53
    IF       shift, and go to state 54
    WHILE    shift, and go to state 55
    WRITE    shift, and go to state 56
    READ     shift, and go to state 57

    $default  reduce using rule 63 (comando_sem_rotulo)

    comando_composto         go to state 58
    comandos                 go to state 59
    comando                  go to state 60
    comando_sem_rotulo       go to state 61
    leitura                  go to state 62
    escrita                  go to state 63
    atribuicao_proc_ou_func  go to state 64
    desvio                   go to state 65
    comando_condicional      go to state 66
    comando_repetitivo       go to state 67


State 44

    6 bloco: parte_declara_labels $@2 parte_declara_vars $@3 parte_declara_subrotinas $@4 comando_composto •

    $default  reduce using rule 6 (bloco)


State 45

   27 parte_declara_subrotinas: parte_declara_subrotinas declara_proc PONTO_E_VIRGULA •

    $default  reduce using rule 27 (parte_declara_subrotinas)


State 46

   28 parte_declara_subrotinas: parte_declara_subrotinas declara_func PONTO_E_VIRGULA •

    $default  reduce using rule 28 (parte_declara_subrotinas)


State 47

   24 lista_id_var: lista_id_var VIRGULA • var

    IDENT  shift, and go to state 38

    var  go to state 68


State 48

   20 declara_var: $@6 lista_id_var DOIS_PONTOS • $@7 tipo $@8 PONTO_E_VIRGULA

    $default  reduce using rule 18 ($@7)

    $@7  go to state 69


State 49

   32 declara_proc: PROCEDURE IDENT $@9 • talvez_params_formais $@10 PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  shift, and go to state 70

    $default  reduce using rule 38 (talvez_params_formais)

    talvez_params_formais  go to state 71
    params_formais         go to state 72


State 50

   36 declara_func: FUNCTION IDENT $@11 • talvez_params_formais $@12 DOIS_PONTOS tipo $@13 PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  shift, and go to state 70

    $default  reduce using rule 38 (talvez_params_formais)

    talvez_params_formais  go to state 73
    params_formais         go to state 72


State 51

   54 comando: NUMERO • $@16 DOIS_PONTOS comando_sem_rotulo

    $default  reduce using rule 53 ($@16)

    $@16  go to state 74


State 52

   72 atribuicao_proc_ou_func: IDENT • $@17 a_continua

    $default  reduce using rule 71 ($@17)

    $@17  go to state 75


State 53

   83 desvio: GOTO • NUMERO

    NUMERO  shift, and go to state 76


State 54

   86 comando_condicional: IF • expressao $@22 THEN comando_sem_rotulo $@23 talvez_else

    MAIS   shift, and go to state 77
    MENOS  shift, and go to state 78

    $default  reduce using rule 112 (mais_menos_vazio)

    expressao          go to state 79
    expressao_simples  go to state 80
    mais_menos_vazio   go to state 81


State 55

   91 comando_repetitivo: WHILE • $@24 expressao DO $@25 comando_sem_rotulo

    $default  reduce using rule 89 ($@24)

    $@24  go to state 82


State 56

   68 escrita: WRITE • ABRE_PARENTESES itens_escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 83


State 57

   64 leitura: READ • ABRE_PARENTESES itens_leitura FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 84


State 58

   59 comando_sem_rotulo: comando_composto •

    $default  reduce using rule 59 (comando_sem_rotulo)


State 59

   50 comando_composto: T_BEGIN comandos • T_END
   51 comandos: comandos • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 85
    T_END            shift, and go to state 86


State 60

   52 comandos: comando •

    $default  reduce using rule 52 (comandos)


State 61

   55 comando: comando_sem_rotulo •

    $default  reduce using rule 55 (comando)


State 62

   60 comando_sem_rotulo: leitura •

    $default  reduce using rule 60 (comando_sem_rotulo)


State 63

   61 comando_sem_rotulo: escrita •

    $default  reduce using rule 61 (comando_sem_rotulo)


State 64

   56 comando_sem_rotulo: atribuicao_proc_ou_func •

    $default  reduce using rule 56 (comando_sem_rotulo)


State 65

   62 comando_sem_rotulo: desvio •

    $default  reduce using rule 62 (comando_sem_rotulo)


State 66

   58 comando_sem_rotulo: comando_condicional •

    $default  reduce using rule 58 (comando_sem_rotulo)


State 67

   57 comando_sem_rotulo: comando_repetitivo •

    $default  reduce using rule 57 (comando_sem_rotulo)


State 68

   24 lista_id_var: lista_id_var VIRGULA var •

    $default  reduce using rule 24 (lista_id_var)


State 69

   20 declara_var: $@6 lista_id_var DOIS_PONTOS $@7 • tipo $@8 PONTO_E_VIRGULA

    IDENT  shift, and go to state 87

    tipo  go to state 88


State 70

   39 params_formais: ABRE_PARENTESES • parametros FECHA_PARENTESES

    $default  reduce using rule 43 ($@15)

    parametros         go to state 89
    secoes_parametros  go to state 90
    $@15               go to state 91


State 71

   32 declara_proc: PROCEDURE IDENT $@9 talvez_params_formais • $@10 PONTO_E_VIRGULA bloco

    $default  reduce using rule 31 ($@10)

    $@10  go to state 92


State 72

   37 talvez_params_formais: params_formais •

    $default  reduce using rule 37 (talvez_params_formais)


State 73

   36 declara_func: FUNCTION IDENT $@11 talvez_params_formais • $@12 DOIS_PONTOS tipo $@13 PONTO_E_VIRGULA bloco

    $default  reduce using rule 34 ($@12)

    $@12  go to state 93


State 74

   54 comando: NUMERO $@16 • DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  shift, and go to state 94


State 75

   72 atribuicao_proc_ou_func: IDENT $@17 • a_continua

    ABRE_PARENTESES  reduce using rule 79 ($@19)
    ATRIBUICAO       reduce using rule 73 ($@18)
    $default         reduce using rule 78 (proc_sem_param)

    a_continua      go to state 95
    $@18            go to state 96
    proc_sem_param  go to state 97
    proc_com_param  go to state 98
    $@19            go to state 99


State 76

   83 desvio: GOTO NUMERO •

    $default  reduce using rule 83 (desvio)


State 77

  110 mais_menos_vazio: MAIS •

    $default  reduce using rule 110 (mais_menos_vazio)


State 78

  111 mais_menos_vazio: MENOS •

    $default  reduce using rule 111 (mais_menos_vazio)


State 79

   86 comando_condicional: IF expressao • $@22 THEN comando_sem_rotulo $@23 talvez_else

    $default  reduce using rule 84 ($@22)

    $@22  go to state 100


State 80

   97 expressao: expressao_simples •
   98          | expressao_simples • relacao expressao_simples
  105 expressao_simples: expressao_simples • mais_menos_or termo

    OR           shift, and go to state 101
    MAIS         shift, and go to state 102
    MENOS        shift, and go to state 103
    MAIOR        shift, and go to state 104
    MAIOR_IGUAL  shift, and go to state 105
    MENOR        shift, and go to state 106
    MENOR_IGUAL  shift, and go to state 107
    DIFERENTE    shift, and go to state 108
    IGUAL        shift, and go to state 109

    $default  reduce using rule 97 (expressao)

    relacao        go to state 110
    mais_menos_or  go to state 111


State 81

  106 expressao_simples: mais_menos_vazio • termo

    ABRE_PARENTESES  shift, and go to state 112
    NUMERO           shift, and go to state 113
    IDENT            shift, and go to state 114

    termo             go to state 115
    fator             go to state 116
    variavel_ou_func  go to state 117


State 82

   91 comando_repetitivo: WHILE $@24 • expressao DO $@25 comando_sem_rotulo

    MAIS   shift, and go to state 77
    MENOS  shift, and go to state 78

    $default  reduce using rule 112 (mais_menos_vazio)

    expressao          go to state 118
    expressao_simples  go to state 80
    mais_menos_vazio   go to state 81


State 83

   68 escrita: WRITE ABRE_PARENTESES • itens_escrita FECHA_PARENTESES

    MAIS   shift, and go to state 77
    MENOS  shift, and go to state 78

    $default  reduce using rule 112 (mais_menos_vazio)

    itens_escrita      go to state 119
    expressao          go to state 120
    expressao_simples  go to state 80
    mais_menos_vazio   go to state 81


State 84

   64 leitura: READ ABRE_PARENTESES • itens_leitura FECHA_PARENTESES

    IDENT  shift, and go to state 121

    itens_leitura  go to state 122
    item_leitura   go to state 123


State 85

   51 comandos: comandos PONTO_E_VIRGULA • comando

    T_BEGIN  shift, and go to state 43
    NUMERO   shift, and go to state 51
    IDENT    shift, and go to state 52
    GOTO     shift, and go to state 53
    IF       shift, and go to state 54
    WHILE    shift, and go to state 55
    WRITE    shift, and go to state 56
    READ     shift, and go to state 57

    $default  reduce using rule 63 (comando_sem_rotulo)

    comando_composto         go to state 58
    comando                  go to state 124
    comando_sem_rotulo       go to state 61
    leitura                  go to state 62
    escrita                  go to state 63
    atribuicao_proc_ou_func  go to state 64
    desvio                   go to state 65
    comando_condicional      go to state 66
    comando_repetitivo       go to state 67


State 86

   50 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 50 (comando_composto)


State 87

   21 tipo: IDENT •

    $default  reduce using rule 21 (tipo)


State 88

   20 declara_var: $@6 lista_id_var DOIS_PONTOS $@7 tipo • $@8 PONTO_E_VIRGULA

    $default  reduce using rule 19 ($@8)

    $@8  go to state 125


State 89

   39 params_formais: ABRE_PARENTESES parametros • FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 126


State 90

   40 parametros: secoes_parametros •
   42 secoes_parametros: secoes_parametros • PONTO_E_VIRGULA $@14 lista_de_parametros DOIS_PONTOS tipo

    PONTO_E_VIRGULA  shift, and go to state 127

    $default  reduce using rule 40 (parametros)


State 91

   44 secoes_parametros: $@15 • lista_de_parametros DOIS_PONTOS tipo

    VAR  shift, and go to state 128

    $default  reduce using rule 49 (talvez_var)

    lista_de_parametros  go to state 129
    talvez_var           go to state 130


State 92

   32 declara_proc: PROCEDURE IDENT $@9 talvez_params_formais $@10 • PONTO_E_VIRGULA bloco

    PONTO_E_VIRGULA  shift, and go to state 131


State 93

   36 declara_func: FUNCTION IDENT $@11 talvez_params_formais $@12 • DOIS_PONTOS tipo $@13 PONTO_E_VIRGULA bloco

    DOIS_PONTOS  shift, and go to state 132


State 94

   54 comando: NUMERO $@16 DOIS_PONTOS • comando_sem_rotulo

    T_BEGIN  shift, and go to state 43
    IDENT    shift, and go to state 52
    GOTO     shift, and go to state 53
    IF       shift, and go to state 54
    WHILE    shift, and go to state 55
    WRITE    shift, and go to state 56
    READ     shift, and go to state 57

    $default  reduce using rule 63 (comando_sem_rotulo)

    comando_composto         go to state 58
    comando_sem_rotulo       go to state 133
    leitura                  go to state 62
    escrita                  go to state 63
    atribuicao_proc_ou_func  go to state 64
    desvio                   go to state 65
    comando_condicional      go to state 66
    comando_repetitivo       go to state 67


State 95

   72 atribuicao_proc_ou_func: IDENT $@17 a_continua •

    $default  reduce using rule 72 (atribuicao_proc_ou_func)


State 96

   74 a_continua: $@18 • ATRIBUICAO atribuicao

    ATRIBUICAO  shift, and go to state 134


State 97

   75 a_continua: proc_sem_param •

    $default  reduce using rule 75 (a_continua)


State 98

   76 a_continua: proc_com_param •

    $default  reduce using rule 76 (a_continua)


State 99

   82 proc_com_param: $@19 • ABRE_PARENTESES $@20 lista_de_expressoes $@21 FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 135


State 100

   86 comando_condicional: IF expressao $@22 • THEN comando_sem_rotulo $@23 talvez_else

    THEN  shift, and go to state 136


State 101

  109 mais_menos_or: OR •

    $default  reduce using rule 109 (mais_menos_or)


State 102

  107 mais_menos_or: MAIS •

    $default  reduce using rule 107 (mais_menos_or)


State 103

  108 mais_menos_or: MENOS •

    $default  reduce using rule 108 (mais_menos_or)


State 104

  103 relacao: MAIOR •

    $default  reduce using rule 103 (relacao)


State 105

  104 relacao: MAIOR_IGUAL •

    $default  reduce using rule 104 (relacao)


State 106

  101 relacao: MENOR •

    $default  reduce using rule 101 (relacao)


State 107

  102 relacao: MENOR_IGUAL •

    $default  reduce using rule 102 (relacao)


State 108

  100 relacao: DIFERENTE •

    $default  reduce using rule 100 (relacao)


State 109

   99 relacao: IGUAL •

    $default  reduce using rule 99 (relacao)


State 110

   98 expressao: expressao_simples relacao • expressao_simples

    MAIS   shift, and go to state 77
    MENOS  shift, and go to state 78

    $default  reduce using rule 112 (mais_menos_vazio)

    expressao_simples  go to state 137
    mais_menos_vazio   go to state 81


State 111

  105 expressao_simples: expressao_simples mais_menos_or • termo

    ABRE_PARENTESES  shift, and go to state 112
    NUMERO           shift, and go to state 113
    IDENT            shift, and go to state 114

    termo             go to state 138
    fator             go to state 116
    variavel_ou_func  go to state 117


State 112

  120 fator: ABRE_PARENTESES • expressao FECHA_PARENTESES
